# aios-insurance

./: CLAUDE.md  Makefile  README.md  pyproject.toml
src/insurance/: __init__.py  bootstrap.py  config.py
src/insurance/agents/: __init__.py  claims_advisor.py  claims_triage.py  fraud_detection.py
src/insurance/connectors/: __init__.py  registry.py
src/insurance/deployment/: __init__.py  channels.py  constraints.py  spokes.py
src/insurance/lineage/: __init__.py  graph.py
src/insurance/ontology/: __init__.py  computed.py  interfaces.py  link_types.py  object_types.py
src/insurance/security/: __init__.py  markings.py  policies.py
src/insurance/transforms/: __init__.py  pipelines.py
tests/: conftest.py
tests/unit/: test_agents.py  test_bootstrap.py  test_deployment.py  test_lineage.py  test_ontology.py  test_security.py  test_transforms.py
